add correct npm install incantation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <h1 id="hilltop-hydro">hilltop hydro</h1>
 <p>Provides api access to a hilltop API service, see <a href="http://www.hilltop.co.nz/">http://www.hilltop.co.nz/</a></p>
 <h2 id="installation">Installation</h2>
-<pre><code>npm install --save @mediasuitenz/hilltophydro
+<pre><code>npm install --save hilltop-hydro
 </code></pre><h2 id="debugging">Debugging</h2>
 <p>Use <code>DEBUG=hilltophydro node &lt;yourApp&gt;</code> to enable tracing for the hilltop module</p>
 
